report nearly finished

--- a/report/report.tex
+++ b/report/report.tex
@@ -31,8 +31,13 @@
     \item 创新点：路由式线程管理 
 \end{itemize}
 
-\section{系统架构}
-%TODO: system arch
+\section{系统架构}\label{arch}
+系统架构如下所示:
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.33]{myqq.png}
+    \caption{系统架构}
+\end{figure}
 
 \subsection{基础收发模式}
 
@@ -139,7 +144,7 @@
     \item[\textbf{路由}]循环执行。通过定义内部接口routing，作为一个守护线程运行在系统后端，从task优先级队列中取出首个task，根据协议解封装，并根据其中的recver\_type等字段将其发送给相应的Consumer子线程。
 \end{itemize}
 
-该线程“路由”作为本系统的组织核心，在系统结构中的作用和位置已经在前文给出。%TODO:
+该线程“路由”作为本系统的组织核心，在系统结构中的作用和位置已经在前文\ref{arch}给出。
 
 
 \section{功能设计}
@@ -157,10 +162,20 @@
 \subsubsection{文件传输}
 同样使用前文描述的用户间通信协议\ref{progress}，可以较好的实现用户之间的大于10M的文件传输，传输速度视网络状况而定。在相应人的聊天窗口下，选择发送功能为file，在弹出的文件浏览窗中选择对应文件，即可开始传输。在好友端会保存在当前运行目录下，文件名增加recved\_前缀。
 \subsubsection{GUI}
-\subsection{选做部分}
-\subsubsection{语音视频通话}
-\subsubsection{线程"路由"设计}
+用户界面使用PyQt5予以实现，并且基于信号-槽进行了线程安全的设计。主窗口界面类似电脑端微信，各按钮功能一目了然，在此不多赘述。值得注意的是视频聊天点击之后需要稍微等待一会，等待声卡、摄像头等硬件启动。若长时间未弹出通话窗口，可能是由于硬件启动失败或对方拒绝连接。请查看命令行输出。
 
-\section{结果与分析}
+\subsection{选做部分}
+选做部分的网络通信设计独立于前述，未使用\ref{sender}所述的发送线程。主要是由于视频流、音频流需要解码、压缩等，同时对带宽占用较大，因此单独处理。
+\subsubsection{语音视频通话}
+音视频通话使用独立设计的套接字clientMedia和serverMedia，分别对应音视频发送和接收。类似于前面的Listener\ref{listener}，serverMedia在客户端一开始就运行起来，等待他人连接请求。值得一提的是由于带宽有限，本套接字监听的连接上限设置为1。在用户点击聊天界面的video并点击发送后，会自动向目标端发送视频连接请求，若同意请求，则近端会接收到从远端返回的视频连接(由远端运行clientMedia连接近端serverMedia)，并自动弹窗显示对方视频。此时若对方也想查看你的视频，请等待对方发送的视频连接请求。
+
+在底层处理上，为了保证传输质量，音视频数据流分别在两个套接字管理的TCP连接中进行。音频流使用PyAudio库获得，\textbf{此处应注意不同端系统声卡表现不一样，使用前请检查硬件设备，否则会导致连接无法建立}，通过码率44100，双通道进行传输。在采样过程中，采用了通过阈值进行降噪的策略。如果发现连接中没有声音，请调高系统音量，调整麦克风。
+
+视频流通过opencv的videocapture获得，视频采样大小为$640\times480\times3$三通道彩色图像。为了保证传输速率，使用zlib库的压缩来对原始图像进行编码压缩。在数据流传输过程中采取分块策略，首先通过报头让接收方得知压缩后的单帧视频大小，并准备好分块接受。通过定义CHUNK来约束最大数据块，并通过循环将该帧视频通过TCP连接连续发送出去。接收方用类似的方法进行循环接受，解压缩，并且通过numpy相关功能拼接成完整图片。
+
+实验过程中发现，实际上仅仅通过CPU处理，实时的视频压缩与解压缩并不能高速实时实现，还不如直接发送原始图片来的流程。但最终还是保留了压缩设计。
+\subsubsection{线程"路由"设计}
+如前所述\ref{router}，此处不再赘述。
+\section{结果}
 
 \end{document}
