code polished and comment added

--- a/report/report.tex
+++ b/report/report.tex
@@ -18,7 +18,7 @@
 
 用户将通过中央服务器来登录、离线、查询好友通信IP，实际通信数据流通过Peer to Peer的隧道实现，不需要服务器参与。
 
-本次实验后端使用Python实现，前端使用PyQt5.
+本次实验后端使用Python实现，前端使用PyQt5实现。
 
 本次实验我实现了如下功能：
 \begin{itemize}
