report add json part

--- a/report/report.tex
+++ b/report/report.tex
@@ -50,7 +50,7 @@
 在用户操作中，每向一个用户发送消息时，会自动检测是否建立了连接，否则会向目标IP启动发送线程，请求连接，即Sender\ref{sender}
 
 \subsubsection{Sender}\label{sender}
-一个发送线程即一个面向目标IP的TCP套接字，成功建立连接后，该线程从缓存中不断取出从线程“路由”发来的数据，并根据数据格式和内容，首先将数据报报头通过套接字发送给目标端，等待ACK，接收到确认后将数据发送出去，表示为状态机如下：
+一个发送线程即一个面向目标IP的TCP套接字，成功建立连接后，该线程从缓存中不断取出从线程“路由”发来的数据，并根据数据格式和内容，首先将数据报报头通过套接字发送给目标端，等待ACK，接收到确认后将数据发送出去。在发送过程中，使用json数据格式将原始数据列表序列化为比特流，再通过socket发送出去。表示为状态机如下：
 \begin{figure}[H]
     \centering
     \includegraphics[scale=0.4]{senderstate.png}
@@ -65,6 +65,7 @@
     \includegraphics[scale=0.4]{listenerstate.png}
     \caption{Listener状态机}
 \end{figure}
+每一个服务线程，通过建立的TCP连接进行数据接受，接受模式仍是报头+数据的方式，将接收到的数据流使用json数据格式反序列化，一步还原为自定义的通信协议格式，方便处理。
 
 \subsection{进程通信协议}\label{progress}
 所谓进程通信协议即用户与用户之间的数据通信协议，用于统一同一网络下的不同客户端之间的数据报格式。
