add result in report; project finished

--- a/report/report.tex
+++ b/report/report.tex
@@ -188,5 +188,54 @@
 \subsubsection{线程"路由"设计}
 如前所述\ref{router}，此处不再赘述。
 \section{结果}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{login.png}
+    \caption{登录}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{mainpanel.png}
+    \caption{主界面}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{addfriend.png}
+    \caption{添加好友}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.4]{confirm.png}
+    \caption{对方收到好友消息确认}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{succesadd.png}
+    \caption{添加成功(好友在线状态自动更新)}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.18]{sendtext.png}
+    \includegraphics[scale=0.18]{recvtext.png}
+    \caption{文字消息收发}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.18]{sendfile.png}
+    \includegraphics[scale=0.18]{recvfile.png}
+    \includegraphics[scale=0.3]{recvlargefile.png}
+    \caption{文件收发(大于10M)}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{videocallreq.png}
+    \includegraphics[scale=0.18]{videocall.png}
+    \caption{音视频通话请求与应答}
+\end{figure}
 
 \end{document}
